syntax = "proto3";

option java_multiple_files = true;
option java_package = "github.com/denjons/RoboViewer/robot-gateway/grpc/positionreport";
option java_outer_classname = "PositionReportProto";

package positionreport;

service PositionReport {    
    rpc ReportPosition(stream PositionUpdate) returns (PeportResponse) {}
}

message PositionUpdate {
    SequenceNumber sequenceNumber = 1;
    Position position = 2;
    RobotId robotId = 3;
    SessionId sessionId = 4; 
}

message PeportResponse {
    ResponseStatus responseStatus = 1;
    string statusMessage = 2;
}

enum ResponseStatus {
    OK = 0;
    ERROR = 1;
}

message SequenceNumber{
    uint64 count = 1;
}

message Position {
    uint32 x = 1;
    uint32 y = 2;
}

message RobotId {
    uint32 id = 1;
}

message SessionId {
    uint32 id = 1;
}